--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,12 @@ body, html {
     padding: 40px 0 60px;
     text-align: center;
 }
+    .header-interior-capitulo-2{
+        background-color: #C79421;
+    }
+        .header-interior-capitulo-2 p{
+            color: #000;
+        }
     .header-interior h5{
         font: 1.5rem/1.2 "Cormorant Garamond", serif;
         text-align: center;
@@ -393,21 +399,18 @@ body, html {
         border-radius:50%;
         left: -4px;
         top: -5px;
-    }
-  
+    }  
     .timeline ul li:nth-child(odd) .left_content{
         position:absolute;
         top:12px;
         right:-165px;
         margin:0;
-        padding:8px 16px;
-    
+        padding:8px 16px;    
         color:#fff;
         box-shadow:0 0 0 3px rgba(59,112,239,0.3);
         border-radius:18px;
         
-    }
-    
+    }    
     .timeline ul li:nth-child(even) .left_content{
         position:absolute;
         top:12px;
@@ -420,6 +423,77 @@ body, html {
         border-radius:18px;
         
     }
+.box-obra{
+    box-sizing: border-box;
+    margin: 50px auto;
+    max-width: 900px;
+}
+    .box-portada{
+        display: inline-block;
+        max-width: 400px;
+        vertical-align: top;
+    }
+        .box-portada h4{
+            display: inline-block;
+            font: 1.8rem/1 "Cormorant Garamond", serif;
+            font-style: italic;
+            font-weight: 700;
+            margin: 0 auto;
+            max-width: 150px;
+            vertical-align: top;
+        }
+        .box-portada img{
+            box-shadow: 2px 2px 20px #555555;
+            display: inline-block;
+            margin: 0 0 0 40px;
+            max-width: 200px;
+            vertical-align: top;
+        }
+    .box-info-obra{
+        border-top: 1px solid #000;
+        display: inline-block;
+        max-width: 460px;
+        padding: 20px 0 0 40px;
+        vertical-align: top;        
+    }
+        .box-info-obra p{
+            display: inline-block;
+            font: 15px/1.4'founders_groteskregular';
+            margin: 0 10px;
+            max-width: 45%;
+            vertical-align: top;
+        }
+        .box-info-obra h6{
+            font: 1.8rem/1.3 "Cormorant Garamond", serif;
+            font-weight: 300;
+            font-style: italic;
+            margin: 20px auto;
+            max-width: 400px;
+            text-align: center;
+        }
+        .box-info-obra a {
+            border: 1px solid #000;
+            color: #000;
+            display: block;
+            font: 1.2rem / 40px 'Founders Grotesk X-Condensed';
+            height: 35px;
+            margin: 10px auto;
+            max-width: 120px;
+            text-align: center;
+            text-decoration: none;
+            text-transform: uppercase;
+            padding: 5px 10px;
+            
+        }
+    .box-obra-derecha{
+
+    }
+        .box-obra-derecha .box-info-obra{
+            padding: 20px 40px 0 0;
+        }
+        .box-obra-derecha .box-portada img{
+            margin: 0 40px 0 0;
+        }
 
 
 @media only screen and (max-width: 640px) {
