--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ body, html {
     }
 .box-obra{
     box-sizing: border-box;
-    margin: 50px auto;
+    margin: 50px auto 80px;
     max-width: 900px;
 }
     .box-portada{
@@ -494,6 +494,20 @@ body, html {
         .box-obra-derecha .box-portada img{
             margin: 0 40px 0 0;
         }
+.box-separador{
+    border-bottom: 1px solid #cfb66e;
+    border-top: 1px solid #cfb66e;
+    margin: 80px auto;
+    padding: 40px 0;
+    text-align: center;
+}
+    .box-separador h3{
+        font: 2rem/1.4 "Cormorant Garamond", serif;
+        font-weight: 300;
+        font-style: italic;
+        margin: 0 auto;
+        max-width: 550px;
+    }
 
 
 @media only screen and (max-width: 640px) {
