--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,9 @@ body, html {
     .header-interior-capitulo-2{
         background-color: #C79421;
     }
+    .header-interior-capitulo-3{
+        background-color: #98612B;
+    }
         .header-interior-capitulo-2 p{
             color: #000;
         }
@@ -507,6 +510,63 @@ body, html {
         font-style: italic;
         margin: 0 auto;
         max-width: 550px;
+    }
+
+.box-main-galeria{
+    margin: 80px auto 0;
+    max-width: 900px;
+    text-align: center;
+}
+    .box-foto{
+        display: inline-block;
+        vertical-align: top;
+    }
+        .box-foto p{
+            font: 15px/1.4'founders_groteskregular';
+            margin: 5px auto;
+            text-align: left;
+        }
+    .box-doble{
+        display: inline-block;
+        margin: 0 30px 30px;
+        max-width: 320px;
+        text-align: left;
+        vertical-align: top;
+    }
+    #foto-1{
+        margin-bottom: 30px;
+        max-width: 600px;
+    }
+    #foto-2{
+        max-width: 500px;
+    }
+    #foto-3{
+        margin-bottom: 30px;
+        max-width: 250px;
+    }
+    #foto-5{
+        display: inline-block;
+        margin-bottom: 30px;
+        max-width: 410px;
+        vertical-align: top;
+    }
+    #foto-6{
+        display: inline-block;
+        margin: 0 30px 30px;
+        max-width: 400px;
+        vertical-align: top;
+    }
+    #foto-7{
+        display: inline-block;
+        margin: -150px 30px 30px 0;
+        max-width: 330px;
+        vertical-align: top;
+    }
+    #foto-8{
+        display: inline-block;
+        margin: 0 30px 30px;
+        max-width: 450px;
+        vertical-align: top;
     }
 
 
