--- a/css/style.css
+++ b/css/style.css
@@ -646,18 +646,22 @@ body, html {
     .box-main-galeria{
         padding: 0 20px;
     }
-    .box-doble{
+    .box-main-galeria .box-doble{
         margin: 30px 0 30px;
         max-width: 100%;
     }
     .box-foto p{
         font-size: 17px;
     }
-    #foto-3{
+    .box-main-galeria #foto-3{
         max-width: 100%;
     }
-    #foto-7,
-    #foto-8{
+    .box-main-galeria #foto-5, 
+    .box-main-galeria #foto-6 {
+        max-width: 100%;
+    }
+    .box-main-galeria #foto-7,
+    .box-main-galeria #foto-8{
         margin: 0 auto 30px;
         max-width: 100%;
     }
@@ -672,7 +676,7 @@ body, html {
     }
 }
   
-@media (max-width: 767px){
+@media (max-width: 768px){
     .timeline{
         width:100%;
     }
@@ -695,4 +699,21 @@ body, html {
         left: -3px;    
         /*top: -18px; */  
     }  
+
+    #foto-2{
+        max-width: 400px;
+    }
+    .box-doble{
+        max-width: 200px;
+    }
+    #foto-5,
+    #foto-6{
+        max-width: 300px;
+    }
+    #foto-7{
+        max-width: 230px;
+    }
+    #foto-8{
+        max-width: 340px;
+    }
 }
