--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
          url('../fonts/foundersgrotesk-regular-webfont.woff') format('woff');
 }
 @font-face {
+    font-family: 'founders_groteskmedium';
+    src: url('../fonts/foundersgrotesk-medium-webfont.woff2') format('woff2'),
+         url('../fonts/foundersgrotesk-medium-webfont.woff') format('woff');
+}
+@font-face {
     font-family: 'Founders Grotesk X-Condensed';
     src: url('../fonts/FoundersGroteskXCond-Bold.woff2') format('woff2'),
          url('../fonts/FoundersGroteskXCond-Bold.woff') format('woff');
@@ -264,6 +269,9 @@ body, html {
     .header-interior-capitulo-3{
         background-color: #98612B;
     }
+    .header-interior-capitulo-4{
+        background-color: #98832B;
+    }
         .header-interior-capitulo-2 p{
             color: #000;
         }
@@ -512,7 +520,8 @@ body, html {
         max-width: 550px;
     }
 
-.box-main-galeria{
+.box-main-galeria,
+.box-main-personajes{
     margin: 80px auto 0;
     max-width: 900px;
     text-align: center;
@@ -522,7 +531,7 @@ body, html {
         vertical-align: top;
     }
         .box-foto p{
-            font: 15px/1.4'founders_groteskregular';
+            font: 15px/1.4 'founders_groteskregular';
             margin: 5px auto;
             text-align: left;
         }
@@ -568,7 +577,62 @@ body, html {
         max-width: 450px;
         vertical-align: top;
     }
+.box-personaje{
+    margin: 0 auto 60px;
+}
+    .box-personaje img{
+        display: inline-block;
+        max-width: 300px;
+        vertical-align: top;
+    }
+    .box-texto-personaje{
+        display: inline-block;
+        max-width: 320px;
+        text-align: left;
+        vertical-align: top;
+    }
+        .box-texto-personaje h6,
+        .box-ilustracion-personaje h6{
+            color: #98832B;
+            font: 1.8rem / 1.3 "Cormorant Garamond", serif;
+            font-style: italic;
+            margin: 0 auto;
+            text-align: left;
+        }
+        .box-texto-personaje h5{
+            color: #98832B;
+            font: 32px/1.3 'founders_groteskmedium';
+            margin: 10px auto;
+        }
+            .box-texto-personaje h5 span{
+                color: #000;
+                display: block;
+                font: 1.7rem/1.1 "Cormorant Garamond", serif;
+                font-weight: 700;
+                font-style: italic;
+            }
+        .box-texto-personaje p{
+            font: 15px/1.4 'founders_groteskregular';
+        }
+    .box-ilustracion-personaje{
+        display: inline-block;
+        margin: 0 20px;
+        max-width: 410px;
+        vertical-align: top;
+    }
+    #personaje-1{
+        max-width: 800px;
+    }
+        #personaje-1 img{
+            margin: 0 30px;       
+        }
+    #personaje-2{
 
+    }
+        #personaje-2 img{
+            margin: 0 auto 20px;       
+            max-width: 400px;
+        }
 
 @media only screen and (max-width: 640px) {
 
