--- a/css/style.css
+++ b/css/style.css
@@ -769,7 +769,26 @@ body, html {
         margin: 0 auto 30px;
         max-width: 100%;
     }
-    
+    .box-texto-personaje p{
+        font-size: 17px;
+    }
+    .separador-personaje{
+        max-width: 90%;
+    }
+    #personaje-3{
+        padding: 0 20px;
+    }
+    #personaje-4,
+    #personaje-5 {
+        margin: 0 20px;
+        max-width: 100%;
+        width: 90%;
+    }
+    .box-main-personajes .separador-vertical{
+        height: 1px;
+        max-width: 90%;
+        width: 90%;
+    }
 
 }
   
