--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
          url('../fonts/FoundersGroteskXCond-Bold.woff') format('woff');
     font-weight: bold;            
 }
+@font-face {
+    font-family: 'Founders Grotesk Condensed';
+    src: url('../fonts/FoundersGroteskCond-Lt.woff2') format('woff2'),
+        url('../fonts/FoundersGroteskCond-Lt.woff') format('woff');
+    font-weight: 300;
+}
+
 
 body, html {    
     margin: 0;
@@ -280,6 +287,19 @@ body, html {
         .header-interior-capitulo-2 p{
             color: #000;
         }
+    .header-interior-capitulo-7{
+        background-color: #34725F;
+        height: 50vh;
+    }
+        .header-interior-capitulo-7.header-interior h1{
+            padding-top: 100px;
+        }
+    .header-interior h3{
+        font: 1.5rem/1.2 'Founders Grotesk Condensed';
+        max-width: 450px;
+        text-align: center;
+        margin: 0 auto;
+    }
     .header-interior h5{
         font: 1.5rem/1.2 "Cormorant Garamond", serif;
         text-align: center;
@@ -752,6 +772,70 @@ body, html {
             max-width: 100%;
         }
 
+h4.amigos{
+    border-bottom: 1px solid #c2c2c2;
+    border-top: 1px solid #c2c2c2;
+    color: #33725F;
+    font: 4rem/1.2 'Founders Grotesk X-Condensed';
+    margin: 35px auto;
+    max-width: 400px;
+    padding: 25px 0 10px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.box-amigo{
+
+}
+    .box-amigo img{
+        display: block;
+        margin: 0 auto;
+        max-width: 60px;
+    }
+    .box-amigo h4{
+        font: 2.1rem/1.2 "Cormorant Garamond", serif;
+        margin: 10px auto 0;
+        text-align: center;
+        font-style: italic;
+        font-weight: 800;
+    }
+    .box-amigo h5.cargo{
+        color: #98832B;
+        font: 1rem/1.2 'founders_groteskmedium';
+        margin: 0 auto;
+        text-align: center;
+    }
+    .box-parrafo{
+        margin: 20px auto;
+        max-width: 500px;
+        text-align: center;
+    }
+        .box-parrafo p{
+            display: inline-block;
+            font: 0.9rem/1.3 'founders_groteskregular';
+            margin: 10px;
+            max-width: 220px;
+            text-align: left;
+            vertical-align: top;
+        }
+    .box-amigo h6{
+        color: #33725F;
+        font: 1.5rem/1.2 "Cormorant Garamond", serif;
+        text-align: center;
+        font-style: italic;
+        font-weight: 300;
+        margin: 10px auto;
+        max-width: 300px;
+    }
+span.separador-amigo{
+    background-color: #c2c2c2;
+    display: block;
+    height: 1px;
+    margin: 50px auto;
+    width: 60%;
+}
+
+
+
 @media only screen and (max-width: 640px) {
 
     body,
@@ -876,6 +960,10 @@ body, html {
         .box-main-textos-largos p{
             font-size: 1.1rem;
         }
+    .box-parrafo p{
+        font: 1.2rem / 1.3 'founders_groteskregular';
+        max-width: 80%;
+    }
 }
   
 @media (max-width: 1000px){
