--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,41 @@ body, html {
         .header-interior-capitulo-7.header-interior h1{
             padding-top: 100px;
         }
+    .header-interior-capitulo-8{
+        height: 50vh;
+        overflow: hidden;
+        position: relative;
+    }
+        #capitulo .header-interior-capitulo-8 h1{
+            max-width: 420px;
+            position: relative;
+            z-index: 2;
+        }
+        #capitulo .header-interior-capitulo-8 h3{
+            max-width: 550px;
+            position: relative;
+            z-index: 2;
+        }
+        #capitulo .header-interior-capitulo-8 h5{
+            z-index: 2;
+        }
+        .header-interior-capitulo-8 img{
+            display: block;
+            margin: 80px auto 0;
+            max-width: 70px;
+            position: relative;
+            z-index: 2;
+        }
+        #videoBG{            
+            height: 100%;
+            left: 0;
+            object-fit: cover;
+            object-position: top;
+            position: absolute;
+            top: 0;
+            width: 100vw;
+            
+        }
     .header-interior h3{
         font: 1.5rem/1.2 'Founders Grotesk Condensed';
         max-width: 450px;
@@ -834,6 +869,69 @@ span.separador-amigo{
     width: 60%;
 }
 
+.box-bajada-nobel{
+    margin: 20px auto;
+    max-width: 520px;    
+}
+    .box-bajada-nobel img{
+        display: block;
+        margin: 0 auto;
+        max-width: 80px;
+    }
+    .box-bajada-nobel h3{
+        font: 1.5rem / 1.2 "Cormorant Garamond", serif;
+        text-align: center;
+        font-style: italic;
+    }
+    .box-bajada-nobel .separador-amigo{
+        width: 90%;
+    }
+p.texto-nobel{
+    font: 0.9rem/1.3 'founders_groteskregular';
+    margin: 10px auto 20px;
+    max-width: 400px;
+}
+.box-foto-nobel{
+    
+}
+    .box-foto-nobel p{
+        font: 0.9rem/1.3 'founders_groteskregular';
+        margin: 5px auto;
+    }
+    .bg-foto-nobel-1{
+        margin: 80px auto 40px;
+        max-width: 800px;
+    }
+    .box-fotos-centro{
+        margin-bottom: 80px;
+        text-align: center;
+    }
+        .bg-foto-nobel-2{
+            display: inline-block;
+            max-width: 550px;
+            text-align: left;
+            vertical-align: top;
+        }
+        .box-foto-doble{
+            display: inline-block;
+            margin: 0 40px;
+            max-width: 550px;
+            text-align: left;
+            vertical-align: top;
+        }
+            .bg-foto-nobel-3{
+                display: inline-block;
+                max-width: 350px;
+                text-align: left;
+                vertical-align: top;
+            }
+            .bg-foto-nobel-4{
+                display: inline-block;
+                max-width: 450px;
+                text-align: left;
+                vertical-align: top;
+            }
+
 
 
 @media only screen and (max-width: 640px) {
@@ -964,6 +1062,33 @@ span.separador-amigo{
         font: 1.2rem / 1.3 'founders_groteskregular';
         max-width: 80%;
     }
+
+    .box-bajada-nobel{
+        padding: 0 20px;
+    }
+        .box-bajada-nobel h3{
+            line-height: 1.4;
+        }
+        p.texto-nobel,
+        .box-foto-nobel p{
+            font: 1.2rem / 1.4 'founders_groteskregular';
+        }
+    .bg-foto-nobel-1,
+    .bg-foto-nobel-2{
+        margin-bottom: 40px;
+        padding: 0 20px;
+    }
+    .box-foto-doble{
+        margin: 0 auto;
+        text-align: center;
+    }
+        .bg-foto-nobel-3,
+        .bg-foto-nobel-4{
+            max-width: 90%;
+        }
+        .bg-foto-nobel-3{
+            margin-bottom: 40px;
+        }
 }
   
 @media (max-width: 1000px){
