--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@
     font-weight: 300;
 }
 
+.clear{
+    clear: both;
+}
 
 body, html {    
     margin: 0;
@@ -40,7 +43,8 @@ body, html {
         height: 400vh; 
     }
     #capitulo{
-
+        height: auto;
+        overflow-y: hidden;
     }
 .main-intro{
     /*height: 100%;*/
@@ -328,6 +332,14 @@ body, html {
             top: 0;
             width: 100vw;
             
+        }
+    .header-interior-capitulo-9{
+        background-color: #613472;
+        height: 50vh;
+    }
+        #capitulo .header-interior-capitulo-9 h1{
+            margin-top: 100px;
+            max-width: 500px;
         }
     .header-interior h3{
         font: 1.5rem/1.2 'Founders Grotesk Condensed';
@@ -931,8 +943,143 @@ p.texto-nobel{
                 text-align: left;
                 vertical-align: top;
             }
-
-
+p.bajada-cronologia{
+    font: 1.2rem / 1.3 "Cormorant Garamond", serif;
+    font-style: italic;
+    margin: 50px auto;
+    max-width: 400px;
+    text-align: left;
+    vertical-align: top;
+}
+    p.bajada-cronologia::first-letter {
+        font-size: 125px;
+        float: left;
+        line-height: 98px;
+        margin-right: 0.1em;
+    }
+span.selecciona{
+    color: #98832B;
+    display: block;
+    font: 18px/1.2 'founders_groteskmedium';
+    text-align: center;
+}
+ul.decadas{
+    padding: 0;
+    text-align: center;
+}
+    ul.decadas li{
+        border: 1px solid #c2c2c2;
+        cursor: pointer;
+        display: inline-block;
+        font: 18px/1.2 'founders_groteskmedium';
+        margin: 20px auto;
+        margin-left: -4px;
+        padding: 15px 20px;
+        vertical-align: top;
+    }
+        ul.decadas li:nth-child(2),
+        ul.decadas li:nth-child(3),
+        ul.decadas li:nth-child(4),
+        ul.decadas li:nth-child(5),
+        ul.decadas li:nth-child(6){
+            border-left: none;
+        }
+        ul.decadas li.decada-activa,
+        ul.decadas li:hover{
+            background-color: #98832B;
+            color: #fff;
+        }
+.box-timeline{
+    margin: 0 auto;
+    max-width: 700px;    
+    position: relative;
+}
+    .box-timeline:before {
+        background: #000;
+        content: '';
+        position: absolute;
+        height: 100%;
+        left: 50%;
+        top: 125px;
+        width: 1px;
+        z-index: 1;
+    }
+    .box-timeline h4{
+        background-color: #fff;
+        color: #000;
+        font: 5rem/1 "Cormorant Garamond", serif;
+        font-style: italic;
+        font-weight: 800;
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px 0 40px;
+        position: relative;
+        z-index: 2;        
+    }
+    h5.year{
+        background-color: #98832B;
+        color: #fff;
+        font: 21px/1.2 'founders_groteskmedium';
+        margin: 0 auto;
+        max-width: 60px;
+        padding: 5px;
+        position: relative;
+        text-align: center;
+        z-index: 2;
+    }
+    .box-item-timeline{
+        clear: both;
+        float: left;
+        max-width: 43%;
+    }   
+        .box-item-timeline img{
+            display: inline-block;
+            max-width: 60px;
+        }
+    .item-derecha{
+        float: right;
+        margin-bottom: 30px;
+        margin-top: -70px;
+    }
+    .opacity{
+        opacity: 0;
+    }
+        .box-texto-obra{
+            display: inline-block;
+            margin-bottom: 30px;
+            vertical-align: bottom;
+        }
+            .box-texto-obra h5{
+                color: #98832B;
+                font: 17px/1.2 'founders_groteskmedium';
+                margin: 0 auto;
+            }
+            .box-texto-obra h6{
+                font: 1.3rem/1 "Cormorant Garamond", serif;
+                font-style: italic;
+                font-weight: 800;
+                margin: 0 auto;
+            }
+            .box-texto-obra p{
+                font: 1rem/1.2 'founders_groteskregular';
+                margin: 0 auto;
+            }
+            .item-derecha h5{
+                font-size: 24px;
+            }
+    .lapiz{
+        left: 50%;
+        max-width: 15px;   
+        opacity: 0;
+        position: fixed;
+        transition: opacity 0.1s ease-out;
+        transform: translate(-50%, 50%);
+        top: 0;
+        z-index: 1;        
+    }
+        .lapiz.show {
+            opacity: 1;
+        }
 
 @media only screen and (max-width: 640px) {
 
@@ -1089,6 +1236,24 @@ p.texto-nobel{
         .bg-foto-nobel-3{
             margin-bottom: 40px;
         }
+    p.bajada-cronologia{
+        padding: 0 20px;
+    }
+    .box-timeline{
+        padding: 0 20px;
+    }
+        ul.decadas::-webkit-scrollbar {
+            display: none; 
+        }
+        ul.decadas {
+            display: flex;
+            overflow-x: auto;
+            white-space: nowrap;
+            gap: 0; 
+            padding: 0 20px;
+            scrollbar-width: none; 
+        }
+    
 }
   
 @media (max-width: 1000px){
