--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body, html {
             margin-right: 0.1em;
         }
             p.interior-capitular::first-letter{
-                font-size: 90px;                
+                font-size: 71px;                
                 line-height: 70px;
             }
 
@@ -944,19 +944,16 @@ p.texto-nobel{
                 vertical-align: top;
             }
 p.bajada-cronologia{
+    color: #613472;
     font: 1.2rem / 1.3 "Cormorant Garamond", serif;
     font-style: italic;
+    font-weight: 600;
     margin: 50px auto;
-    max-width: 400px;
-    text-align: left;
+    max-width: 420px;
+    text-align: center;
     vertical-align: top;
 }
-    p.bajada-cronologia::first-letter {
-        font-size: 125px;
-        float: left;
-        line-height: 98px;
-        margin-right: 0.1em;
-    }
+    
 span.selecciona{
     color: #98832B;
     display: block;
