--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@
 
 body, html {    
     margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+    padding: 0;    
     /* height: 400vh; */
     font-style: normal;
     font-display: swap;
@@ -44,7 +43,7 @@ body, html {
     }
     #capitulo{
         height: auto;
-        overflow-y: hidden;
+        /*overflow-y: hidden;*/
     }
 .main-intro{
     /*height: 100%;*/
@@ -997,7 +996,7 @@ ul.decadas{
         background: #000;
         content: '';
         position: absolute;
-        height: 120%;
+        height: 101%;
         left: 50%;
         top: 125px;
         width: 1px;
