--- a/css/style.css
+++ b/css/style.css
@@ -1109,6 +1109,34 @@ ul.decadas{
                 font-weight: 800;
             }
 
+.box-footer{
+    padding: 50px 0;
+    text-align: center;
+}
+    .box-footer img{
+        display: block;
+        margin: 10px auto;
+        max-width: 120px;
+    }
+    .box-footer ul{
+        list-style: none;
+        margin: 0 auto;
+        max-width: 300px;
+        padding: 10px 0 30px;
+    }
+        .box-footer ul li{
+            font: 1rem / 1.3 "Cormorant Garamond", serif;
+            font-weight: 500;
+        }
+            .box-footer ul li p{
+                margin-bottom: 20px;
+            }
+                .box-footer ul li p span{
+                    display: block;
+                    font-weight: 800;
+                }
+
+
 @media only screen and (max-width: 640px) {
 
     body,
