--- a/css/style.css
+++ b/css/style.css
@@ -996,7 +996,7 @@ ul.decadas{
         background: #000;
         content: '';
         position: absolute;
-        height: 101%;
+        height: 100%;
         left: 50%;
         top: 125px;
         width: 1px;
@@ -1110,8 +1110,11 @@ ul.decadas{
             }
 
 .box-footer{
-    padding: 50px 0;
-    text-align: center;
+    background: #fff;
+    padding: 80px 0 40px;
+    position: relative;
+    text-align: center;   
+    z-index: 10;    
 }
     .box-footer img{
         display: block;
