--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,21 @@ p.descripcion-premios{
         margin: 10px auto 40px;
         text-align: center;
     }
+span.separador-seccion{
+    background-color: #c2c2c2;
+    display: block;
+    height: 1px;
+    margin: 10px auto;
+    width: 30%;
+}
+h4.seccion{
+    font: 3.8rem/1 'Founders Grotesk X-Condensed';
+    height: 42px;
+    margin: 0 auto;
+    padding: 15px 0;
+    text-align: center;
+    text-transform: uppercase;
+}
 
 p.bajada-cronologia{
     color: #613472;
@@ -1014,6 +1029,13 @@ span.selecciona{
     color: #98832B;
     display: block;
     font: 18px/1.2 'founders_groteskmedium';
+    margin: 50px auto 10px;
+    text-align: center;
+}
+p.sumilla{
+    font: 21px/1.2 'founders_groteskregular';
+    margin: 50px auto;
+    max-width: 420px;
     text-align: center;
 }
 ul.decadas{
@@ -1055,7 +1077,7 @@ ul.decadas{
         position: absolute;
         height: 100%;
         left: 50%;
-        top: 125px;
+        top: 209px;
         width: 1px;
         z-index: 1;
     }
@@ -1082,6 +1104,26 @@ ul.decadas{
         text-align: center;
         z-index: 2;
     }
+    .box-titulo-secciones{
+        border-bottom: 1px solid #000;
+        border-top: 1px solid #000;        
+        text-align: center;
+    }
+        .box-titulo-secciones h6{
+            color: #98832B;
+            display: inline-block;
+            font: 22px/1.2 'founders_groteskmedium';
+            margin: 0 auto;
+            padding: 20px 0;
+            vertical-align: top;
+            width: 49%;
+        }
+            .box-titulo-secciones h6:nth-child(2){
+                background-color: #FDF6DA;
+            }
+
+
+
     .box-item-timeline{
         clear: both;
         float: left;
@@ -1089,7 +1131,7 @@ ul.decadas{
     }   
         .box-item-timeline img{
             display: inline-block;
-            max-width: 60px;
+            max-width: 75px;
         }
     .box-obra-timeline{
         margin-bottom: 10px;
@@ -1113,6 +1155,7 @@ ul.decadas{
         margin-top: -305px;
     }
         .box-texto-obra{
+           
             display: inline-block;
             margin-bottom: 30px;
             max-width: 270px;
@@ -1165,6 +1208,120 @@ ul.decadas{
                 font-style: italic;
                 font-weight: 800;
             }
+    .box-columna-izq,
+    .box-columna-der{
+        display: inline-block;
+        position: relative;
+        vertical-align: top;
+        width: 50%;
+    }
+    .box-columna-der{
+        background-color: #FDF6DA;
+        padding-top: 50px;
+        width: 49%;
+    }
+        .box-columna-izq:before {
+            background: #000;
+            content: '';
+            position: absolute;
+            height: 100%;
+            left: 50%;
+            top: 0;
+            width: 1px;
+            z-index: 1;
+        }
+        .box-columna-izq .box-item-timeline{
+            display: block;
+            float: inherit;
+            margin: 0 auto;
+            max-width: 100%;
+            padding: 50px 0;
+            text-align: center;
+        }
+        .box-columna-izq .box-item-timeline .box-portada-obra{
+            display: inline-block;
+            vertical-align: top;
+            width: 49%;
+        }
+        .box-columna-izq .box-texto-obra{
+            box-sizing: border-box;
+            padding-left: 25px;
+            text-align: left;
+            width: 49%;
+        }
+            .box-columna-izq .box-texto-obra h4{
+                background-color: #98832B;
+                color: #fff;
+                font: 21px / 1.2 'founders_groteskmedium';
+                margin: 0 0 15px 0;
+                max-width: 50px;
+                padding: 5px;
+                position: relative;
+            }   
+                .box-columna-izq .box-texto-obra h4::before{
+                    background-color: #000;
+                    content: '';
+                    height: 1px;
+                    left: -45%;
+                    position: absolute;
+                    top: 50%;
+                    width: 27px;                    
+                }
+        .box-columna-der .box-texto-obra{
+            box-sizing: border-box;
+            padding-left: 25px;
+        }
+            .box-columna-der .box-texto-obra h4{
+                background-color: #98832B;
+                color: #fff;
+                font: 21px / 1.2 'founders_groteskmedium';
+                margin: 0 0 15px 0;
+                max-width: 50px;
+                padding: 5px;
+                position: relative;
+            }
+                .box-columna-der .box-texto-obra h4::before{
+                    background-color: #000;
+                    content: '';
+                    height: 1px;
+                    left: -45%;
+                    position: absolute;
+                    top: 50%;
+                    width: 27px;                    
+                }
+            .box-columna-der .box-texto-obra h6{
+                font: 1rem / 1.2 'founders_groteskregular';
+                margin: 0 auto;
+            }
+
+    .box-timeline .margin-bottom-112{
+        margin-bottom: 112px;
+    }
+
+    .box-timeline .margin-top-159{
+        margin-top: 159px;
+    }
+    .box-timeline .margin-top-171{
+        margin-top: 171px;
+    }    
+
+    .box-columna-izq .padding-bottom-105{
+        padding-bottom: 105px;
+    }
+    .box-columna-izq .padding-bottom-190{
+        padding-bottom: 190px;
+    }
+    .box-columna-izq .padding-bottom-260{
+        padding-bottom: 260px;
+    }
+
+    .box-columna-der .padding-top-620{
+        padding-top: 620px;
+    }
+   
+    
+       
+
 
 .box-footer{
     background: #fff;
@@ -1383,6 +1540,64 @@ ul.decadas{
         }
     .box-timeline h4{
         font-size: 4rem;
+    }
+
+    .box-titulo-secciones h6{
+        font: 17px / 1 'founders_groteskmedium';
+    }
+
+    ul.premios{
+        margin: 10px auto 40px;
+    }
+    .separador-premios{
+        height: 1px;
+        margin: 20px auto;
+        width: 70%;
+    }
+    p.descripcion-premios{
+        font: 17px/1.2 'founders_groteskregular';
+        padding: 0 20px;
+    }
+    p.texto-premios,
+    .box-iframe p{
+        padding: 0 20px;
+    }
+
+    .box-item-timeline img{
+        max-width: 55px;   
+    }
+    .box-columna-izq:before{
+        left: 37%;
+    }
+    .box-columna-izq .box-item-timeline .box-portada-obra{
+        text-align: left;
+        width: 36%;
+    }
+    .box-columna-izq .box-texto-obra{
+        padding-left: 10px;
+        padding-right: 5px;
+        width: 59%;
+        word-break: break-word;
+    }
+    .box-columna-izq .box-texto-obra h5{
+        margin: 0;
+        width: 80%;
+    }
+    .box-columna-izq .box-texto-obra h4::before{
+        left: -24%;
+        width: 15px;
+    }
+
+    .box-columna-der{        
+        width: 48.5%;
+    }
+    .box-columna-der .box-texto-obra{
+        max-width: 95%;
+        padding-left: 10px;
+    }
+    .box-columna-der .box-texto-obra h4::before{
+        left: -25%;
+        width: 15px;
     }
     
 }
