--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,18 @@
     font-weight: 300;
 }
 
+@font-face {
+    font-family: 'prelomedium';
+    src: url('../fonts/Prelo-Medium-webfont.woff2') format('woff2'),
+         url('../fonts/Prelo-Medium-webfont.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'prelobold'; 
+    src: url('../fonts/Prelo-Bold-webfont.woff2') format('woff2'),
+         url('../fonts/Prelo-Bold-webfont.woff') format('woff');
+}
+
 .clear{
     clear: both;
 }
@@ -1435,15 +1447,15 @@ ul.decadas{
         padding: 10px 0 30px;
     }
         .box-footer ul li{
-            font: 1rem / 1.3 "Cormorant Garamond", serif;
-            font-weight: 500;
+            font: 1rem / 1.3 'prelomedium';
         }
             .box-footer ul li p{
                 margin-bottom: 20px;
+                font-family: 'prelobold';
             }
                 .box-footer ul li p span{
                     display: block;
-                    font-weight: 800;
+                    font: 1rem / 1.3 'prelomedium';
                 }
 
 
