--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,9 @@ body, html {
             padding-bottom: 0;
             padding-top: 160px;    
         }
+        .header-interior-capitulo-1 h1{
+            max-width: 490px;
+        }
     .header-interior-capitulo-2{
         background-color: #C79421;
     }
@@ -1877,12 +1880,16 @@ ul.decadas{
         width: 15px;
     }
 
+    .box-texto-obra h6{
+        font-size: 1.2rem;
+    }
     .box-columna-der{        
         width: 48.5%;
     }
     .box-columna-der .box-texto-obra{
         max-width: 95%;
         padding-left: 10px;
+        word-break: break-word;
     }
     .box-columna-der .box-texto-obra h4::before{
         left: -25%;
@@ -1947,6 +1954,14 @@ ul.decadas{
     #personaje-10{
         margin: 0;
     }
+
+    h4.seccion{
+        font-size: 2.8rem;
+        height: 75px;
+    }
+    p.sumilla{
+        padding: 0 20px;
+    }
     
 }
   
@@ -1997,6 +2012,29 @@ ul.decadas{
     #foto-8{
         max-width: 340px;
     }
+}
+
+
+@media (max-width: 360px){
+
+    .box-timeline .margin-top-93 {
+        padding-top: 93px;
+    }
+    .box-timeline .margin-bottom-112 {
+        margin-bottom: 190px;
+    }
+    .box-timeline .margin-top-159 {
+        margin-top: 217px;
+    }
+
+    .box-columna-der .padding-top-620{
+        padding-top: 705px;
+    }
+
+    .box-columna-izq .padding-top-190{
+        padding-top: 288px;
+    }
+
 }
 
 
